Update Logo and descriptions

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 1.3.0
+mod_version = 1.0
 maven_group = de.larsensmods.stl_backport
-archives_name = spring_to_life
+archives_name = falling-leaves-backport-1.21.1
 enabled_platforms = fabric
 
 # Minecraft properties
